--- a/app/assets/stylesheets/components/_video_item.scss
+++ b/app/assets/stylesheets/components/_video_item.scss
@@ -1,7 +1,7 @@
 
 .vidx-background{
     background-color: rgb(249, 249, 249);
-    height: 138vh;
+    height: 1200px;
 }
 
 
@@ -12,7 +12,7 @@
     background-color: rgb(249, 249, 249);
     padding-left: 83px;
     padding-top: 22px;
-    height: 110vh;
+    height: 1040px;
 }
 
 
